# macro_oscillator

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
Source/DSP/: BraidsVoice.cpp  BraidsVoice.h  Mseg.h
